--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,11 +1,19 @@
 .aboutus-company {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 96px 80px;
-  gap: 96px;
-
   background-color: $content-color-light-1;
+
+  .container {
+    max-width: map-get($container-max-widths, xxl);
+    margin: 0 auto;
+    box-sizing: border-box;
+  }
+
+  .aboutus-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 96px 80px;
+    gap: 96px;
+  }
 
   .aboutus {
     display: flex;
@@ -53,13 +61,16 @@
     width: 100%;
     max-width: 1280px;
     border: 1px solid $color-primary;
+
+    margin: 0 auto;
   }
 
   .asseenis {
     display: flex;
     flex-direction: column;
-    padding: 0px;
     gap: 40px;
+    width: 100%;
+    max-width: 1280px;
 
     &__title {
       font-weight: 300;
@@ -70,11 +81,18 @@
 
     &__company {
       display: flex;
+      flex-shrink: 1;
       flex-direction: row;
+      flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
-      padding: 0px;
-      width: 1280px;
+
+      width: 100%;
+
+      @media only screen and (max-width: 1200px) {
+        gap: 20px;
+      }
     }
   }
 }
+
