--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,6 +12,20 @@ $content-color-light-3: #899f87;
 $content-color-dark-1: #3c5e39;
 $content-color-dark-2: #213721;
 
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1200px,
+  xxl: 1440px
+);
+
+$bp-largest: 1200px;
+$bp-large: 1024px;
+$bp-medium: 992px;
+$bp-small: 37.5em;
+$bp-smallest: 31.25em;
+
 $font-secondary: 'Aileron', sans-serif;
 $font-primary: 'IvyMode', sans-serif;
 
@@ -31,11 +45,10 @@ body {
     color: $content-color-dark-1;
     font-family: $font-secondary;   
     font-weight: 400;
+    background-color: $content-color-light-1;
 }
 
 .container {
   margin: 0 auto;
-  display: grid;
-  grid-template-rows: 733px 589px 1021px 807px 129px 1290px 529px 677px 434px 214px;
   max-width: 1440px;
 }
