--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,10 +4,26 @@
   justify-content: center;
   align-items: center;
   position: relative;
-
-  height: 533px;
-
+  flex-wrap: wrap;
   background: $content-color-light-1;
+
+  .container {
+    width: 100%;
+    max-width: map-get($container-max-widths, xxl);
+  }
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  &__logo {
+    width: 176px;
+
+    @media screen and (max-width: $bp-large) {
+      width: 160px;
+    }
+  }
 
   &__top {
     display: flex;
@@ -17,37 +33,112 @@
     flex-wrap: nowrap;
     height: auto;
     width: 100%;
+
+    @media screen and (max-width: $bp-large) {
+      height: 400px;
+    }
   }
 
   &__column {
+    flex: 1 1 360px;
+    max-width: 100%;
+    height: 468px;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 56px 40px;
     gap: 24px;
 
-    width: 100%;
-    max-width: 360px;
-    height: 468px;
-
     background: $content-color-light-1;
 
-    border-width: 0px 1px;
+    border-width: 0px 0px 0px 1px;
     border-style: solid;
     border-color: $color-primary;
+
+    @media screen and (max-width: $bp-large) {
+      padding: 56px 0;
+    }
+
+    &--heading {
+      color: $content-color-light-3;
+    }
+
+    &--menu {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 14px;
+
+      font-size: 22px;
+      text-align: center;
+      text-decoration: none;
+      list-style: none;
+
+      a {
+        text-decoration: none;
+        color: inherit;
+      }
+
+      @media screen and (max-width: $bp-large) {
+        font-size: 16px;
+      }
+    }
   }
 
   &__brand {
+    flex: 1 1 323px;
+    max-width: 100%;
+    height: 468px;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 64px 0px 0px;
-
-    width: 100%;
-    max-width: 323px;
-    height: 468px;
+    gap: 136px;
 
     background: $content-color-light-1;
+
+    @media screen and (max-width: $bp-large) {
+      gap: 96px;
+    }
+
+    &--item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 52px;
+    }
+
+    .opening-headline {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      &__subtitle {
+        font-size: 20px;
+        color: $content-color-light-2;
+
+        @media screen and (max-width: $bp-large) {
+          font-size: 14px;
+        }
+      }
+
+      &__hours {
+        font-size: 22px;
+        color: $content-color-dark-1;
+
+        @media screen and (max-width: $bp-large) {
+          font-size: 16px;
+        }
+      }
+    }
+  }
+
+  &__socials {
+    display: flex;
+    flex-direction: row;
+    gap: 18px;
   }
 
   &__list {
@@ -63,14 +154,28 @@
   &__credit {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
     padding: 10px 0px;
     gap: 35px;
 
-    width: 202px;
-    height: 37px;
+    width: 37px;
 
     transform: rotate(90deg);
+
+    &--items-1 {
+      font-size: 12px;
+      padding-left: 133px;
+
+      flex: none;
+      @media screen and (max-width: $bp-large) {
+        padding-left: 115px;
+      }
+    }
+    &--items-2 {
+      font-size: 12px;
+      padding-right: 133px;
+
+      flex: none;
+    }
   }
 
   &__bottom {
@@ -83,19 +188,24 @@
     width: 100%;
     height: 65px;
 
-    background: #f2f6ef;
-    border-top: 1px solid #c8d8c0;
+    background: $content-color-light-1;
+    border-top: 1px solid $color-primary;
   }
 
   &__links {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 0px;
     gap: 40px;
+    font-size: 18px;
+    color: $content-color-dark-2;
+    list-style: none;
 
-    margin: 0 auto;
     width: 261px;
-    height: 25px;
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
   }
 }
