--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 80px;
+  width: 100%;
   // position: fixed;
   // width: 100vw;
 
